changed fonts, colors and ordering

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+        <script src="//cdn.optimizely.com/js/2849630347.js"></script>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Choose with Alice</title>
@@ -12,19 +13,20 @@
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/basscss.css">
         <link rel="stylesheet" href="assets/css/font-awesome.css">
+        <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>        <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="assets/css/alice.css">
     </head>
 
     <body class="bg-white">
 
-      <header class="p4 bg-cover bg-center white bg-gray center" style="background-image: url(https://placehold.it/2880x1000.png)">
+      <header class="p4 bg-cover bg-center white bg-gray center">
         <div class="container">
           <div class="clearfix">
-            <h1 class="center">Have an easy start in Finland</h1>
-            <p class="h2 center">Select and open your bank account before you arrive</p>
+            <h1 class="center">Have an <strong>easy</strong> start in Finland</h1>
+            <p class="h2 center">Select and open your bank account before your arrival</p>
 
-            <a class="button button-big white center mt4 caps" id="getstartednow">Get Started Now</a> <br>
-            <a class="button button-outline white center mt2" id="learnmore">Learn More</a>
+            <a class="button button-big white center caps bg-blue" id="getstartednow">Get Started Now</a> <br>
           </div>
         </div>
       </header>
@@ -32,7 +34,19 @@
       <main class="container">
         <div class="clearfix">
 
-          <h2 class="center blue mt4">Welcome to Finland</h1>
+            <h2 class="mt3 center blue">Benefits of using Alice</h2>
+
+            <div class="col-8 mx-auto">
+                <ul class="list-reset">
+                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You choose the best offer for you.</li>
+                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You let us take care of all the paperwork.</li>
+                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You don't have to wait for an appointment at the bank.</li>
+                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You can pick up your account package immediately when you arrive.</li>
+                    <li class="h3"><i class="fa fa-thumbs-up blue"></i> You can use online banking from the first day.</li>
+                </ul>
+            </div>
+
+          <h2 class="center blue mt4">Welcome to Finland</h2>
 
           <p class="px2">Congratulations for having been accepted to study in Finland! From our own experience we know that you're super excited to jump on that plane and fly to Helsinki, but there are a few things you should know. Due to Finnish systems and regulations, you have a high chance of running into issues with your current bank. Below you see an overview of these.</p>
 
@@ -70,7 +84,7 @@
 
           <p class="center">In many cases it's a good idea to open a Finnish bank account. We help you to do that.</p>
 
-          <h2 class="mt4 center blue">How Alice works</h1>
+          <h2 class="mt4 center blue">How Alice works</h2>
 
           <div class="m2 p2 bg-blue white border rounded">
             <ol class="m0">
@@ -101,17 +115,7 @@
             </ol>
           </div>
 
-          <h2 class="mt4 center blue">Benefits of using Alice</h1>
 
-          <div class="col-8 mx-auto">
-            <ul class="list-reset">
-              <li class="h3"><i class="fa fa-thumbs-up blue"></i> You choose the best offer for you.</li>
-              <li class="h3"><i class="fa fa-thumbs-up blue"></i> You let us take care of all the paperwork.</li>
-              <li class="h3"><i class="fa fa-thumbs-up blue"></i> You don't have to wait for an appointment at the bank.</li>
-              <li class="h3"><i class="fa fa-thumbs-up blue"></i> You can pick up your account package immediately when you arrive.</li>
-              <li class="h3"><i class="fa fa-thumbs-up blue"></i> You can use online banking from the first day.</li>
-            </ul>
-          </div>
 
           <h1 class="mt4 center blue">Be the first to open your account!</h1>
 
@@ -120,7 +124,7 @@
           <form class="col-6 mx-auto mb4" id="form">
             <input type="text" class="block full-width field-light" id="name" placeholder="Your Name"> <br>
             <input type="text" class="block full-width field-light" id="email" placeholder="Email Address"> <br>
-            <button class="block full-width button" id="submit">Put me on the list!</button>
+            <button class="block full-width button bg-blue" id="submit">Put me on the list!</button>
           </form>
 
           <p class="mt4 mb4 center gray">There's one last thing you should know, and that's that this is just a student project (for now). With this website we're trying to find out whether international students would use a service like this. By subscribing you indicate that you are okay with us contacting you with some follow-up questions. No spam, we promise.</p>
