Namespace a style for landingpage

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="assets/css/alice.css">
     </head>
 
-    <body class="bg-white">
+    <body class="bg-white landingpage">
 
       <header class="p4 bg-cover bg-center white bg-gray center">
         <div class="container">
