--- a/public/comparison.html
+++ b/public/comparison.html
@@ -20,7 +20,81 @@
 <body class="bg-white">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col col-3">
+                <h3 class="blue">Filters</h3>
+                <p class="h4 mt2 mb1 gray border-bottom">Account Fee
+                    <small>
+                        <a class="blue" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </p>
+                <label for="fee0" class="block">
+                    <input type="checkbox" name="fee0" id="fee0" class="mr1">€ 0
+                    <small title="per month">/mo</small>
+                </label>
+                <label for="fee2" class="block">
+                    <input type="checkbox" name="fee2" id="fee2" class="mr1">&lt; € 2
+                    <small title="per month">/mo</small>
+                </label>
+                <label for="fee5" class="block">
+                    <input type="checkbox" name="fee5" id="fee5" class="mr1">&lt; € 5
+                    <small title="per month">/mo</small>
+                </label>
+                <label for="fee10" class="block">
+                    <input type="checkbox" name="fee10" id="fee10" class="mr1">&lt; € 10
+                    <small title="per month">/mo</small>
+                </label>
+                <p class="h4 mt2 mb1 gray border-bottom">Cards
+                    <small>
+                        <a class="blue" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </p>
+                <label for="debitcard" class="block">
+                    <input type="checkbox" name="debitcard" id="debitcard" class="mr1">Debit Card</label>
+                <label for="creditcard" class="block">
+                    <input type="checkbox" name="creditcard" id="creditcard" class="mr1">Credit Card</label>
+                <label for="prepaidcard" class="block">
+                    <input type="checkbox" name="prepaidcard" id="prepaidcard" class="mr1">Prepaid Card</label>
+                <p class="h4 mt2 mb1 gray border-bottom">Services
+                    <small>
+                        <a class="blue" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </p>
+                <label for="onlinebanking" class="block">
+                    <input type="checkbox" name="onlinebanking" id="onlinebanking" class="mr1">Online Banking</label>
+                <label for="mobilebanking" class="block">
+                    <input type="checkbox" name="mobilebanking" id="mobilebanking" class="mr1">Mobile Banking</label>
+                <p class="h4 mt2 mb1 gray border-bottom">Foreign Languages
+                    <small>
+                        <a class="blue" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </p>
+                <label for="englishlanguage" class="block">
+                    <input type="checkbox" name="englishlanguage" id="englishlanguage" class="mr1">English</label>
+                <label for="swedishlanguage" class="block">
+                    <input type="checkbox" name="swedishlanguage" id="swedishlanguage" class="mr1">Swedish</label>
+                <label for="russianlanguage" class="block">
+                    <input type="checkbox" name="russianlanguage" id="russianlanguage" class="mr1">Russian</label>
+                <p class="h4 mt2 mb1 gray border-bottom">Opening your Account
+                    <small>
+                        <a class="blue" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </p>
+                <label for="formsavailable" class="block">
+                    <input type="checkbox" name="formsavailable" id="formsavailable" class="mr1">Forms Available</label>
+                <label for="openonline" class="block">
+                    <input type="checkbox" name="openonline" id="openonline" class="mr1">Open Online with Alice
+                    <small>
+                        <a class="gray" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </label>
+                <label for="pickup" class="block">
+                    <input type="checkbox" name="pickup" id="pickup" class="mr1">Ready on arrival
+                    <small>
+                        <a class="gray" href="#"><i class="fa fa-info-circle"></i></a>
+                    </small>
+                </label>
+            </div>
+            <div class="col col-9">
 
                 <ul class="list-reset columns">
                     <li class="pull-left">
