--- a/public/comparison.html
+++ b/public/comparison.html
@@ -426,7 +426,7 @@
                                     <p class="h4 bold mb0">Open Account</p>
                                 </td>
                                 <td class="border-right p2">
-                                    <a href="#" class="mb1 button block full-width center bg-olive">Open with Alice</a>
+                                    <a href="/kyc" class="mb1 button block full-width center bg-olive">Open with Alice</a>
                                     <a class="h6" href="#"><i class="fa fa-chevron-right ml1 mr1"></i>Show details</a>
                                 </td>
                                 <td class="border-right p2">
