last fieldset header -> black in kyc-form

--- a/public/kyc.html
+++ b/public/kyc.html
@@ -178,7 +178,7 @@
                 </fieldset>
 
                 <fieldset class="fieldset-reset">
-                    <legend class="h4 mt2 mb1 gray border-bottom">Political exposure
+                    <legend class="h4 mt2 mb1 border-bottom">Political exposure
                         <small>
                             <a class="blue" href="#"><i class="fa fa-info-circle"></i></a>
                         </small>
