--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <h1 class="center">Have an <strong>easy</strong> start in Finland</h1>
             <p class="h2 center">Select and open your bank account before your arrival</p>
 
-            <a class="button button-big white center caps bg-blue" id="getstartednow">Get Started Now</a> <br>
+            <a class="button button-big white center caps bg-blue" id="getstartednow" href="/list">Get Started Now</a> <br>
           </div>
         </div>
       </header>
