Change Comparison Title

--- a/public/comparison.html
+++ b/public/comparison.html
@@ -20,7 +20,7 @@
     <div class="">
         <div class="clearfix mb2">
             <div class="col col-12 px2">
-                <h3 class="blue">Top 3 Offers</h3>
+                <h3 class="blue">Comparing 3 bank offers</h3>
                 <div class="overflow-scroll">
                     <table class="table-light overflow-hidden bg-white border rounded">
                         <thead class="bg-darken-1">
